--- a/drivers/staging/prima/Kbuild
+++ b/drivers/staging/prima/Kbuild
@@ -746,7 +746,7 @@ CDEFINES += -DEXISTS_MSM_SMSM
 endif
 
 # Fix build for GCC 4.7
-EXTRA_CFLAGS += $(call cc-disable-warning, maybe-uninitialized) -Wno-unused-function
+EXTRA_CFLAGS += $(call cc-disable-warning, maybe-uninitialized) -Wno-misleading-indentation -Wno-unused-function
 
 # Silence Clang warning
 ifeq ($(cc-name),clang)
